2006-01-29  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_handle_key_release),
	(totem_action_handle_key_press), (on_window_key_press_event),
	(totem_callback_connect), (video_widget_create):
	Patch from Julien Moutte <julien@moutte.net> to pause the backend,
	update the seekbar and write "Seek to" in the status bar if it
	can do direct seek (only GStreamer 0.10 right now) (Closes: #328619)

============ Version 1.3.90

2006-01-29  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 1.3.90

2006-01-29  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_sort_queue): more double-error fixes, by sorting
	the queue in the right order, with errors first

2006-01-28  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (parse_asx_entry): prefer mms entries
	in ASX playlists that have more than one REF per ENTRY (Closes: #328734)

2006-01-27  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (totem_pl_parser_parse_internal):
	Fix a crash when gnome-vfs doesn't support the URI scheme, and we
	can't get a mime-type from data afterwards (Closes: #328828)

2006-01-27  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c: (xine_try_error):
	compile with glib 2.6.x which doesn't have g_async_queue_sort

2006-01-27  Julien MOUTTE  <julien@moutte.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_expose_event), (parse_stream_info),
	(bacon_video_widget_open_with_subtitle),
	(bacon_video_widget_set_show_visuals),
	(bacon_video_widget_set_visuals),
	(bacon_video_widget_set_visuals_quality): Better handling of 
	video window's visibility. Change vis on the fly reenabled for
	the lucky ones with a recent GStreamer 0.10 checkout.

2006-01-26  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/totem-mozilla-viewer.c: (totem_embedded_open):
	Don't dereference a NULL GError.
